feat: first draft

--- a/config/styles.scss
+++ b/config/styles.scss
@@ -4,7 +4,7 @@
  */
 $white: #fdfdfd;
 $black: #262626;
-$accent: #e73b93;
+$accent: #ffbd59;
 $secondary: adjust-color($accent, $hue: 90deg);
 
 .this-class-is-set-in-i18n-files h1 {
