--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -128,6 +128,12 @@ h6 {
   font-weight: var(--fw-bold);
   margin: 0;
   line-height: var(--lh-headings);
+  padding: var(--spacing-s) 0;
+}
+
+ul {
+  padding: 0;
+  list-style-type: "→ ";
 }
 
 img,
